# aurora-mysql-column-encryption

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml
data/: employees.csv
sql-scripts/: create-table.sql  insert-dummy-data.sql  query-dummy-data.sql
src/db/: connection.py  crud.py  encryption.py  setup.py
src/models/: __init__.py  employee.py
tests/: test_encryption.py
tf/: main.tf  outputs.tf  variables.tf
